--- a/style.css
+++ b/style.css
@@ -22,39 +22,39 @@ h1.subtitle {
 
 html, body {
   margin: 0;  
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
 }
 
+pre {
+  font-size: 0.7em;
+}
+
+pre > code {
+  padding: 0.5em 1em !important;
+}
+
+p, ul {
+  margin: 0.2em 0em;
+}
 
 body {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: minmax(0, 1fr) max-content max-content;
   font-size: 3.5rem;
   font-family: Lato, sans-serif;
 }
 
-main {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#content {
-  height: 100%;
-  width: 100%;
-}
-
 .slide {
   display: none;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
 }
 
 .slide.active-slide {
-  display: flex;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-rows: max-content minmax(0, 1fr);
 }
 
 .slide .title {
@@ -62,6 +62,7 @@ main {
   color: white;
   background: #c04828;
   font-size: 0.7em;
+  font-weight: 700;
 }
 
 .slide .title div {
@@ -72,9 +73,13 @@ main {
   visibility: hidden;
 }
 
+.slide-content-container {
+  max-height: 100%;
+  width: calc(100vw - 4em);
+  overflow: scroll;
+}
+
 .slide-content {
-  width: calc(100% - 6em);
-  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -128,4 +133,23 @@ footer .info {
   width: var(--progress);
   content: "";
   transition: width 0.2s;
+}
+
+#goto-modal {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  font-size: 4em;
+}
+
+#goto-modal input {
+  font-size: 4rem;
+  box-shadow: 0px 5px 10px grey;
+  border: none;
+  border-radius: 0.2em;
+  -moz-appearance: textfield;
+  text-align: center;
 }
